--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "photoswipe": "^4.1.1",
+    "viscroll": "^1.0.5",
     "vue": "^2.1.0",
     "vue-preview": "^1.0.5",
     "vue-router": "^2.1.3",
