--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-awesome-swiper": "^2.5.4",
     "vue-router": "^2.3.1",
     "vue-swipe": "^2.0.2",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "weixin-js-sdk": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
